# parser_codeforces

./: .sample.env  README.md  config.py  pyproject.toml  pytest_coverage.txt
src/: config.py  dbworker.py  getapi.py  main.py  mixinpostgres.py  scheduler_task.py  telegram.py  tg_bot.py  utils.py
tests/: conftests.py  test_dbworker.py  test_getapi.py  test_mixinpostgres.py  test_utils.py
